<resources>
    <string name="app_name">MyCalculator</string>
    <string name="kalku">.  MII Calculator</string>
    <string name="a_0">0</string>
    <string name="a_1">1</string>
    <string name="a_2">2</string>
    <string name="a_3">3</string>
    <string name="a_4">4</string>
    <string name="a_5">5</string>
    <string name="a_6">6</string>
    <string name="a_7">7</string>
    <string name="a_8">8</string>
    <string name="a_9">9</string>
    <string name="a_.">.</string>
    <string name="b_bagi">/</string>
    <string name="b_kali">X</string>
    <string name="b_tambah">+</string>
    <string name="b_kurang">-</string>
    <string name="b_sama">=</string>
    <string name="b_C">C</string>
    <string name="sci">ganti ke Scientific</string>
</resources>