<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C5C0C0"
    android:id="@+id/activity_home"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="625dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rect"
            android:text="@string/kalku"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rect"
            android:elevation="5dp"
            android:translationZ="190dp"/>

        <EditText
            android:id="@+id/Text_lcd"
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/lcd_sc"
            android:text=""
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="right|center_vertical"
            android:translationZ="200dp"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_7"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_8"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_9"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btntambah"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/rect_btn"
            android:elevation="5dp"
            android:text="@string/b_tambah"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_5"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="295dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_4"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="295dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_5"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="295dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_6"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnkurang"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="295dp"
            android:background="@drawable/rect_btn"
            android:elevation="5dp"
            android:text="@string/b_kurang"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_4"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_1"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_2"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_3"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnkali"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/rect_btn"
            android:elevation="5dp"
            android:text="@string/b_kali"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_3"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnc"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="465dp"
            android:background="@drawable/rect_btn"
            android:elevation="5dp"
            android:text="@string/b_C"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_1"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="465dp"
            android:background="@drawable/rect_btn_numb"
            android:elevation="5dp"
            android:text="@string/a_0"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnsama"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="465dp"
            android:background="@drawable/rect_btn"
            android:elevation="5dp"
            android:text="@string/b_sama"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_2"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnbagi"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="465dp"
            android:background="@drawable/rect_btn"
            android:elevation="5dp"
            android:text="@string/b_bagi"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:theme="@style/button_1"
            android:translationZ="200dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="545dp"
            android:background="@drawable/rect"
            android:elevation="5dp"
            android:text="@string/sci"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/button_0"
            android:translationZ="200dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>